<resources>
    <string name="app_name">fragment application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="number">Number</string>
    <string name="increment">increament</string>
    <string name="decreament">decreament</string>
    <string name="result">Result</string>
</resources>