<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".lifecyclefragment"
    android:id="@+id/llFragment">
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increment"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:id="@+id/btnIncrement"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:id="@+id/btnResult"
       />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decreament"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:id="@+id/btnDecrement"/>
</LinearLayout>