<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red"
        android:backgroundTint="@color/red"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:id="@+id/btnRed"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green"
        android:backgroundTint="@color/green"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:id="@+id/btnGreen"
        android:layout_marginStart="48dp"/>
<com.google.android.material.button.MaterialButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/blue"
    android:backgroundTint="@color/blue"
    android:textSize="20sp"
    android:textStyle="bold|italic"
    android:layout_marginStart="50dp"
    android:id="@+id/btnBlue"/>
</LinearLayout>
<com.google.android.material.button.MaterialButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/number"
    android:textStyle="bold|italic"
    android:textSize="20sp"
    android:id="@+id/Number"
    android:layout_marginStart="130sp"
    android:layout_marginTop="50sp"/>
    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/FragmentContainer"
        android:layout_marginTop="50sp"
        android:background="#A3A1A1"
        android:name="com.harsh.fragmentapplication.lifecyclefragment"
        />
</LinearLayout>